# tuto-reproducible-research

./: .gitignore  COPYING  CRediT.tsv  README
project-heavy/: README
project-heavy/doc/: Makefile  README_project-heavy.html  README_project-heavy.org  listings-setup.tex
project-heavy/doc/images/: README
project-heavy/src/: mytemplate.R  mytemplate.bash  mytemplate.py  project-heavy.R
project-heavy/src/mycpp/: Makefile.am  README  configure.ac
project-heavy/src/mycpp/src/: Makefile.am  mytemplate.cpp
project-heavy/src/mycpp/src/mycpp/: Makefile.am
project-heavy/src/mycpp/src/mycpp/utils/: Makefile.am  utils_io.hpp
project-light/: README
project-light/data/: README
project-light/doc/: Makefile  README.md  README_project-light.Rmd  README_project-light.html
project-light/results/: README  README_project-light.Rmd  example_plotly.Rmd
project-light/src/: README
project1/: AUTHORS  README
project1/doc/: Makefile  README_project1.Rmd
project2/: AUTHORS  COPYING  README
project2/doc/: Makefile  README_project2.org  listings-setup.tex
project2/src/: mytemplate.R  mytemplate.bash  mytemplate.py  project2.R
project2/src/mycpp/: AUTHORS  README  configure.ac
project2/src/mycpp/src/: mytemplate.cpp  utils_io.cpp
talk/: 2014-12_TFlutre_reproducible-research.tex
